// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Alert /> <Alert variant="error" /> renders correctly 1`] = `
<Alert
  mb={3}
  variant="error"
>
  <Component
    mb={3}
    variant="error"
  >
    <Styled(div)
      bg="ui.errorBackground"
      mb={3}
    >
      <div
        className="css-88wsva e1dqxh4r0"
      >
        <Styled(div)
          px={4}
        >
          <div
            className="css-8bw0e3 e1dqxh4r0"
          >
            <Flex
              py={4}
            >
              <div
                className="css-1kfzkx5-Flex e18o73gf0"
              >
                <Styled(div)
                  pr={3}
                >
                  <div
                    className="css-1kdfv5j e1dqxh4r0"
                  >
                    <Icon
                      color="ui.error"
                      name="warning"
                      size={24}
                      title={null}
                    >
                      <Base
                        className="css-ytk37b-Icon e1pa9kzm1"
                        color="ui.error"
                        name="warning"
                        size={24}
                        title={null}
                      >
                        <StyledSvg
                          className="css-ytk37b-Icon e1pa9kzm1"
                          color="ui.error"
                          fill="currentcolor"
                          height={24}
                          title="warning"
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <svg
                            className="e1pa9kzm1 css-1wizixd-StyledSvg-Icon e1pa9kzm0"
                            color="ui.error"
                            fill="currentcolor"
                            height={24}
                            title="warning"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                            />
                          </svg>
                        </StyledSvg>
                      </Base>
                    </Icon>
                  </div>
                </Styled(div)>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="css-51vlo9 e1dqxh4r0"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Styled(div)>
      </div>
    </Styled(div)>
  </Component>
</Alert>
`;

exports[`<Alert /> <Alert variant="info" /> renders correctly 1`] = `
<Alert
  mb={3}
  variant="info"
>
  <Component
    mb={3}
    variant="info"
  >
    <Styled(div)
      bg="ui.infoBackground"
      mb={3}
    >
      <div
        className="css-1ocau4u e1dqxh4r0"
      >
        <Styled(div)
          px={4}
        >
          <div
            className="css-8bw0e3 e1dqxh4r0"
          >
            <Flex
              py={4}
            >
              <div
                className="css-1kfzkx5-Flex e18o73gf0"
              >
                <Styled(div)
                  pr={3}
                >
                  <div
                    className="css-1kdfv5j e1dqxh4r0"
                  >
                    <Icon
                      color="greys.charcoal"
                      name="info"
                      size={24}
                      title={null}
                    >
                      <Base
                        className="css-vo8vz7-Icon e1pa9kzm1"
                        color="greys.charcoal"
                        name="info"
                        size={24}
                        title={null}
                      >
                        <StyledSvg
                          className="css-vo8vz7-Icon e1pa9kzm1"
                          color="greys.charcoal"
                          fill="currentcolor"
                          height={24}
                          title="info"
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <svg
                            className="e1pa9kzm1 css-g2o246-StyledSvg-Icon e1pa9kzm0"
                            color="greys.charcoal"
                            fill="currentcolor"
                            height={24}
                            title="info"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                        </StyledSvg>
                      </Base>
                    </Icon>
                  </div>
                </Styled(div)>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="css-51vlo9 e1dqxh4r0"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Styled(div)>
      </div>
    </Styled(div)>
  </Component>
</Alert>
`;

exports[`<Alert /> <Alert variant="success" /> renders correctly 1`] = `
<Alert
  mb={3}
  variant="success"
>
  <Component
    mb={3}
    variant="success"
  >
    <Styled(div)
      bg="ui.successBackground"
      mb={3}
    >
      <div
        className="css-1ju020a e1dqxh4r0"
      >
        <Styled(div)
          px={4}
        >
          <div
            className="css-8bw0e3 e1dqxh4r0"
          >
            <Flex
              py={4}
            >
              <div
                className="css-1kfzkx5-Flex e18o73gf0"
              >
                <Styled(div)
                  pr={3}
                >
                  <div
                    className="css-1kdfv5j e1dqxh4r0"
                  >
                    <Icon
                      color="ui.success"
                      name="checkCircle"
                      size={24}
                      title={null}
                    >
                      <Base
                        className="css-510x8p-Icon e1pa9kzm1"
                        color="ui.success"
                        name="checkCircle"
                        size={24}
                        title={null}
                      >
                        <StyledSvg
                          className="css-510x8p-Icon e1pa9kzm1"
                          color="ui.success"
                          fill="currentcolor"
                          height={24}
                          title="checkCircle"
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <svg
                            className="e1pa9kzm1 css-1pn7qtu-StyledSvg-Icon e1pa9kzm0"
                            color="ui.success"
                            fill="currentcolor"
                            height={24}
                            title="checkCircle"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                            />
                          </svg>
                        </StyledSvg>
                      </Base>
                    </Icon>
                  </div>
                </Styled(div)>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="css-51vlo9 e1dqxh4r0"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Styled(div)>
      </div>
    </Styled(div)>
  </Component>
</Alert>
`;

exports[`<Alert /> <Alert.error /> renders correctly 1`] = `
<Alert.error
  mb={3}
  variant="error"
>
  <Component
    mb={3}
    variant="error"
  >
    <Styled(div)
      bg="ui.errorBackground"
      mb={3}
    >
      <div
        className="css-88wsva e1dqxh4r0"
      >
        <Styled(div)
          px={4}
        >
          <div
            className="css-8bw0e3 e1dqxh4r0"
          >
            <Flex
              py={4}
            >
              <div
                className="css-1kfzkx5-Flex e18o73gf0"
              >
                <Styled(div)
                  pr={3}
                >
                  <div
                    className="css-1kdfv5j e1dqxh4r0"
                  >
                    <Icon
                      color="ui.error"
                      name="warning"
                      size={24}
                      title={null}
                    >
                      <Base
                        className="css-ytk37b-Icon e1pa9kzm1"
                        color="ui.error"
                        name="warning"
                        size={24}
                        title={null}
                      >
                        <StyledSvg
                          className="css-ytk37b-Icon e1pa9kzm1"
                          color="ui.error"
                          fill="currentcolor"
                          height={24}
                          title="warning"
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <svg
                            className="e1pa9kzm1 css-1wizixd-StyledSvg-Icon e1pa9kzm0"
                            color="ui.error"
                            fill="currentcolor"
                            height={24}
                            title="warning"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              d="M1 21h22L12 2 1 21zm12-3h-2v-2h2v2zm0-4h-2v-4h2v4z"
                            />
                          </svg>
                        </StyledSvg>
                      </Base>
                    </Icon>
                  </div>
                </Styled(div)>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="css-51vlo9 e1dqxh4r0"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Styled(div)>
      </div>
    </Styled(div)>
  </Component>
</Alert.error>
`;

exports[`<Alert /> <Alert.info /> renders correctly 1`] = `
<Alert.info
  mb={3}
  variant="info"
>
  <Component
    mb={3}
    variant="info"
  >
    <Styled(div)
      bg="ui.infoBackground"
      mb={3}
    >
      <div
        className="css-1ocau4u e1dqxh4r0"
      >
        <Styled(div)
          px={4}
        >
          <div
            className="css-8bw0e3 e1dqxh4r0"
          >
            <Flex
              py={4}
            >
              <div
                className="css-1kfzkx5-Flex e18o73gf0"
              >
                <Styled(div)
                  pr={3}
                >
                  <div
                    className="css-1kdfv5j e1dqxh4r0"
                  >
                    <Icon
                      color="greys.charcoal"
                      name="info"
                      size={24}
                      title={null}
                    >
                      <Base
                        className="css-vo8vz7-Icon e1pa9kzm1"
                        color="greys.charcoal"
                        name="info"
                        size={24}
                        title={null}
                      >
                        <StyledSvg
                          className="css-vo8vz7-Icon e1pa9kzm1"
                          color="greys.charcoal"
                          fill="currentcolor"
                          height={24}
                          title="info"
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <svg
                            className="e1pa9kzm1 css-g2o246-StyledSvg-Icon e1pa9kzm0"
                            color="greys.charcoal"
                            fill="currentcolor"
                            height={24}
                            title="info"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm1 15h-2v-6h2v6zm0-8h-2V7h2v2z"
                            />
                          </svg>
                        </StyledSvg>
                      </Base>
                    </Icon>
                  </div>
                </Styled(div)>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="css-51vlo9 e1dqxh4r0"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Styled(div)>
      </div>
    </Styled(div)>
  </Component>
</Alert.info>
`;

exports[`<Alert /> <Alert.success /> renders correctly 1`] = `
<Alert.success
  mb={3}
  variant="success"
>
  <Component
    mb={3}
    variant="success"
  >
    <Styled(div)
      bg="ui.successBackground"
      mb={3}
    >
      <div
        className="css-1ju020a e1dqxh4r0"
      >
        <Styled(div)
          px={4}
        >
          <div
            className="css-8bw0e3 e1dqxh4r0"
          >
            <Flex
              py={4}
            >
              <div
                className="css-1kfzkx5-Flex e18o73gf0"
              >
                <Styled(div)
                  pr={3}
                >
                  <div
                    className="css-1kdfv5j e1dqxh4r0"
                  >
                    <Icon
                      color="ui.success"
                      name="checkCircle"
                      size={24}
                      title={null}
                    >
                      <Base
                        className="css-510x8p-Icon e1pa9kzm1"
                        color="ui.success"
                        name="checkCircle"
                        size={24}
                        title={null}
                      >
                        <StyledSvg
                          className="css-510x8p-Icon e1pa9kzm1"
                          color="ui.success"
                          fill="currentcolor"
                          height={24}
                          title="checkCircle"
                          viewBox="0 0 24 24"
                          width={24}
                        >
                          <svg
                            className="e1pa9kzm1 css-1pn7qtu-StyledSvg-Icon e1pa9kzm0"
                            color="ui.success"
                            fill="currentcolor"
                            height={24}
                            title="checkCircle"
                            viewBox="0 0 24 24"
                            width={24}
                          >
                            <path
                              d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
                            />
                          </svg>
                        </StyledSvg>
                      </Base>
                    </Icon>
                  </div>
                </Styled(div)>
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="css-51vlo9 e1dqxh4r0"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Styled(div)>
      </div>
    </Styled(div)>
  </Component>
</Alert.success>
`;

exports[`<Alert /> contained renders correctly 1`] = `
<Alert
  contained={true}
  mb={3}
  variant="default"
>
  <Component
    contained={true}
    mb={3}
    variant="default"
  >
    <Styled(div)
      bg="greys.porcelain"
      mb={3}
    >
      <div
        className="css-1cuafi0 e1dqxh4r0"
      >
        <Container
          gutter="default"
          maxWidth="default"
        >
          <div
            className="css-1l14fni-Container e188lj6g0"
          >
            <Flex
              py={4}
            >
              <div
                className="css-1kfzkx5-Flex e18o73gf0"
              >
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="css-51vlo9 e1dqxh4r0"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Container>
      </div>
    </Styled(div)>
  </Component>
</Alert>
`;

exports[`<Alert /> renders correctly 1`] = `
<Alert
  mb={3}
  variant="default"
>
  <Component
    mb={3}
    variant="default"
  >
    <Styled(div)
      bg="greys.porcelain"
      mb={3}
    >
      <div
        className="css-1cuafi0 e1dqxh4r0"
      >
        <Styled(div)
          px={4}
        >
          <div
            className="css-8bw0e3 e1dqxh4r0"
          >
            <Flex
              py={4}
            >
              <div
                className="css-1kfzkx5-Flex e18o73gf0"
              >
                <Text
                  hidden={false}
                  mb={0}
                  textAlign="left"
                  textStyle="text"
                >
                  <span
                    className="css-51vlo9 e1dqxh4r0"
                    hidden={false}
                  >
                    Hello world
                  </span>
                </Text>
              </div>
            </Flex>
          </div>
        </Styled(div)>
      </div>
    </Styled(div)>
  </Component>
</Alert>
`;
